Archive2/a1/0eeb9e5665a24e/output
main.cpp:10:15: error: 'const char* SocketExceptionCreate::what()' marked override, but does not override
   const char *what() override { return( "Could not create socket." ); };
               ^
main.cpp:17:15: error: 'const char* SocketExceptionBind::what()' marked override, but does not override
   const char *what() override { return( "Could not bind to port." ); };
               ^
main.cpp:24:15: error: 'const char* SocketExceptionAccept::what()' marked override, but does not override
   const char *what() override { return( "Socket accept() failed." ); };
               ^
